load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["common.go"],
    importpath = "github.com/prysmaticlabs/prysm/v5/api/client/apiutil",
    visibility = ["//visibility:public"],
    deps = ["//consensus-types/primitives:go_default_library"],
)
