load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["attestation.go"],
    importpath = "github.com/OffchainLabs/prysm/v6/beacon-chain/logging",
    visibility = ["//beacon-chain:__subpackages__"],
    deps = [
        "//io/file:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
) 